FRR configs: set `peer PEER local-address ADDR` to ensure correct source

--- a/configs/host1-frr.conf
+++ b/configs/host1-frr.conf
@@ -26,7 +26,7 @@ route-map RM-VIP permit 10
 route-map RM-VIP deny 20
 !
 bfd
- peer 10.10.10.1
+ peer 10.10.10.1 local-address 10.10.10.11
 !
 line vty
 !
